--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>@alphahorizonio/unisockets</title>
-	<meta name="description" content="Documentation for @alphahorizonio/unisockets">
+	<title>@layer3/ECMAockets</title>
+	<meta name="description" content="Documentation for @alphahorizonio/ECMAsockets">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">@alphahorizonio/unisockets</a>
+					<a href="index.html" class="title">@layer3/ECMAockets</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -56,7 +56,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1>@alphahorizonio/unisockets</h1>
+			<h1>layer3/ECMAockets</h1>
 		</div>
 	</div>
 </header>
@@ -65,7 +65,7 @@
 		<div class="col-8 col-content">
 			<div class="tsd-panel tsd-typography">
 				<a href="#unisockets" id="unisockets" style="color: inherit; text-decoration: none;">
-					<h1>unisockets</h1>
+					<h1>layer3/ECMAockets</h1>
 				</a>
 				<p>A universal Berkeley sockets implementation for both WebAssembly (based on WebRTC) and native platforms with bindings for C, Go and TinyGo.</p>
 				<p><img src="https://github.com/alphahorizonio/unisockets/workflows/Yarn%20CI/badge.svg" alt="Yarn CI">
@@ -81,7 +81,7 @@
 				<a href="#overview" id="overview" style="color: inherit; text-decoration: none;">
 					<h2>Overview</h2>
 				</a>
-				<p>unisockets implements the <a href="https://en.wikipedia.org/wiki/Berkeley_sockets">Berkeley sockets API</a>. On a native environment like Linux, it falls back to the native Berkeley sockets API; on WASM it uses <a href="https://webrtc.org/">WebRTC</a> for fast peer-to-peer communication instead of the (non-available) native API. This allows you to &quot;just recompile&quot; an existing socket server/client (such as a web server etc.) and run it natively, in a WebAssembly runtime or in the browser, without the need for a <a href="https://emscripten.org/docs/porting/networking.html">WebSocket proxy like in emscripen</a> or some other proxy mechanism. You&#39;ve heard that right, this library allows you to <code>bind</code> in the browser!</p>
+				<p>layer3/ECMAockets implements the <a href="https://en.wikipedia.org/wiki/Berkeley_sockets">Berkeley sockets API</a>. On a native environment like Linux, it falls back to the native Berkeley sockets API; on WASM it uses <a href="https://webrtc.org/">WebRTC</a> for fast peer-to-peer communication instead of the (non-available) native API. This allows you to &quot;just recompile&quot; an existing socket server/client (such as a web server etc.) and run it natively, in a WebAssembly runtime or in the browser, without the need for a <a href="https://emscripten.org/docs/porting/networking.html">WebSocket proxy like in emscripen</a> or some other proxy mechanism. You&#39;ve heard that right, this library allows you to <code>bind</code> in the browser!</p>
 				<a href="#components" id="components" style="color: inherit; text-decoration: none;">
 					<h3>Components</h3>
 				</a>
@@ -129,7 +129,7 @@
 				<a href="#license" id="license" style="color: inherit; text-decoration: none;">
 					<h2>License</h2>
 				</a>
-				<p>unisockets (c) 2021 Felix Pojtinger and contributors</p>
+				<p>layer3/ECMAockets (c) 2022 Layer3 and contributors</p>
 				<p>SPDX-License-Identifier: AGPL-3.0</p>
 			</div>
 		</div>
