--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<p>The signaling components use the following protocol:</p>
 				<p><a href="https://alphahorizonio.github.io/unisockets/media/sequence.svg"><img src="https://alphahorizonio.github.io/unisockets/media/sequence.svg" alt="Sequence Diagram"></a></p>
 				<p>There are two implementations of the signaling server. The TypeScript version is maintained is this repo, the Java version can be found in <a href="https://github.com/alphahorizonio/junisockets">junisockets</a>.</p>
-				<p>Public signaling server instances:</p>
+				<p>Testnet signaling server:</p>
 				<table>
 					<thead>
 						<tr>
@@ -109,13 +109,9 @@
 						</tr>
 					</thead>
 					<tbody><tr>
-							<td>TypeScript</td>
-							<td><code>wss://signaler.webnetes.dev</code></td>
+							<td><code>https://github.com/webtorrent/bittorrent-tracker</code></td>
 						</tr>
-						<tr>
-							<td>Java</td>
-							<td><code>wss://jsignaler.webnetes.dev</code></td>
-						</tr>
+					
 				</tbody></table>
 				<a href="#further-resources" id="further-resources" style="color: inherit; text-decoration: none;">
 					<h3>Further Resources</h3>
@@ -129,8 +125,8 @@
 				<a href="#license" id="license" style="color: inherit; text-decoration: none;">
 					<h2>License</h2>
 				</a>
-				<p>layer3/ECMAockets (c) 2022 Layer3 and contributors</p>
-				<p>SPDX-License-Identifier: AGPL-3.0</p>
+				<p>layer3/ECMAockets (c) 2022 Layer3 and thanks to alphahorizonio</p>
+				<p></p>
 			</div>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
